@@ -635,11 +635,14 @@ Findet nur Pakete aus der world-Datei.
 Findet nur Pakete aus world_set.
 .TP
 .BR --binary
-Findet nur Pakete mit einer Binärdatei (*.tbz2 oder *.xpak) in PKGDIR.
+Findet nur Pakete mit einer Binärdatei (*.tbz2, *.gpkg.tar oder *.xpak) in PKGDIR.
 Die Version des Binärfiles muss mit mindestens einer vorhandenen oder einer installierten Version übereinstimmen.
 (Falls keine Version vorhanden ist, kann das Paket ebenfalls nicht gefunden werden).
-Nur die reine Existenz einer entsprechenden Datei mit *.tbz2 oder *.xpak wird überprüft:
+Nur die reine Existenz einer entsprechenden Datei mit *.tbz2, *.gpkg.tar oder *.xpak wird überprüft:
 Ob Portage die Datei tatsächlich benutzen kann, hängt auch von Meta-Daten innerhalb dieser Datei ab (wie etwa USE settings), was von eix nicht beachtet wird.
+.TP
+.BI --multi-binary NR
+Findet nur Pakete mit einer Version, die mindest I<NR> Dateien hat, die auf B<--binary> zutreffen.
 .TP
 .B --nonvirtual
 Findet nur Pakete mit mindestens einer Version aus dem Hauptbaum oder einem nicht-virtuellen Overlay.
@@ -1103,12 +1106,12 @@ Dies ist Version 3.14p, die in den Slot "GNAT-3.14p" installiert wird.
 .B 2.0.0_rc1-r6
 Dies ist Version 2.0.0_rc1-r6, und der SLOT ist leer oder "0".
 .TP
-.B 1.0*ilvs^fmpbstuidP{tbz2,pak:2}
+.B 1.0*ilvs^fmpbstuidP{tbz2,gpkg:3,pak:2}
 Dies ist Version 1.0, und gesetzt sind
 PROPERTIES="interactive live virtual set" sowie
 RESTRICT="fetch mirror primaryuri binchecks strip test userpriv installsources bindist parallel".
-Darüberhinaus existiert eine *.tbz2 und zwei *.xpak-Dateien
-(Binärpakete ohne bzw. mit FEATURES==binpkg-multi-instance)
+Darüberhinaus existiert eine *.tbz2, drei *.gpkg.tar und zwei *.xpak-Dateien
+(Binärpakete ohne bzw. mit FEATURES=binpkg-multi-instance bzw, FEATURES=gpkg)
 für diese Version in B<PKGDIR>.
 .TP
 .B 5.0-r3(5.0R3)^f "   oder   " 5.0-r3:5.0R3^f
@@ -1390,19 +1393,31 @@ lokelen bzw. Standard-Konfiguration) die entsprechend Stabilitätseigenschaft ha
 .TP
 .B isbinary
 Dies darf nur in I<VARIABLE> im Zusammenhang von Versionsausgaben benutzt werden.
-Dies ist 1 oder leer, je nachdem ob eine entsprechende Datei mit *.tbz2 oder *.xpak für die Version existiert.
+Dies ist 1 oder leer, je nachdem ob eine entsprechende Datei mit *.tbz2, *.gpkg.tar oder *.xpak für die Version existiert.
 .TP
 .B istbz
 Dies darf nur in I<VARIABLE> im Zusammenhang von Versionsausgaben benutzt werden.
 Dies ist 1 oder leer, je nachdem ob eine entsprechende Datei mit *.tbz2 für die Version existiert.
 .TP
+.B isgpkg
+Dies darf nur in I<VARIABLE> im Zusammenhang von Versionsausgaben benutzt werden.
+Dies ist 1 oder leer, je nachdem ob mindestens eine entsprechende Datei mit *.gpkg.tar für die Version existiert.
+.TP
 .B ispak
 Dies darf nur in I<VARIABLE> im Zusammenhang von Versionsausgaben benutzt werden.
-Dies ist 1 oder leer, je nachdem ob eine entsprechende Datei mit *.xpak für die Version existiert.
+Dies ist 1 oder leer, je nachdem ob mindestens eine entsprechende Datei mit *.xpak für die Version existiert.
+.TP
+.B ismultigpkg
+Dies darf nur in I<VARIABLE> im Zusammenhang von Versionsausgaben benutzt werden.
+Dies ist 1 oder leer, je nachdem ob mindestens zwei Dateien mit *.gpkg.tar für die Version existieren.
 .TP
 .B ismultipak
 Dies darf nur in I<VARIABLE> im Zusammenhang von Versionsausgaben benutzt werden.
 Dies ist 1 oder leer, je nachdem ob mindestens zwei Dateien mit *.xpak für die Version existieren.
+.TP
+.B gpkgcount
+Dies darf nur in I<VARIABLE> im Zusammenhang von Versionsausgaben benutzt werden.
+Es enthält die Anzahl der Dateien mit *.gpkg.tar für die Version. Falls keine existiert, ist es leer.
 .TP
 .B pakcount
 Dies darf nur in I<VARIABLE> im Zusammenhang von Versionsausgaben benutzt werden.
@@ -1482,7 +1497,7 @@ Die Namen aller lokalen Sets, zu denen das Paket gehört, durch Leerzeichen sepa
 Mit B<allsetnames> können auch "system" und "profile" dabei sein.
 .TP
 .B binary
-Ist 1 oder leer, je nachdem, ob mindestens eine Version (verfügbar oder installiert) eine *.tbz2 Datei besitzt.
+Ist 1 oder leer, je nachdem, ob mindestens eine Version (verfügbar oder installiert) eine *.tbz2, *.gpkg.tar, oder *.xpak Datei besitzt.
 Vgl. die Bemerkungen zu B<--binary>.
 .TP
 .B mainrepo
@@ -2391,9 +2406,9 @@ Bestimmt, ob für eix und eix-diff die Option B<--care> die Vorgabe ist.
 Entscheidet, ob der BUILD_TIME-Eintrag (falls existent) der Portage Datenbank
 benutzt werden kann anstelle des Zeitstempels des Verzeichnisses
 (das normalerweise die Installationszeit trägt).
-Der Unterschied ist für gewöhnlich nur für Pakete wichtig, die aus einem *.tbz2
-installiert wurde, aber in den meisten Fällen ist die BUILD_TIME relevanter
-(und auch verlässlicher).
+Der Unterschied ist für gewöhnlich nur für Pakete wichtig, die aus einem
+*.tbz2, *.gpkg.tar, oder *.xpak installiert wurden, aber in den meisten Fällen
+ist die BUILD_TIME relevanter (und auch verlässlicher).
 Unglücklicherweise ist die BUILD_TIME nur für Pakete verfügbar, die
 mit >=portage-2.2_rc63 gebaut und installiert wurden.
 Der B<eix-installed [no-]buildtime> Test kann herausfinden, für welche
